name:               blog
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base      >= 4.6  && < 4.8,
                    binary    >= 0.5  && < 0.8,
                    directory >= 1.2  && < 1.3,
                    filepath  >= 1.3  && < 1.4,
                    hakyll    >= 4.6  && < 4.7,
                    pandoc    >= 1.12 && < 1.14
  ghc-options:      -threaded
  default-language: Haskell2010
