name:               blog
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base,
                    binary,
                    containers,
                    directory,
                    filepath,
                    hakyll,
                    pandoc
  ghc-options:      -threaded
  default-language: Haskell2010
